--- a/module/Page/view/page/page/portfolio.phtml
+++ b/module/Page/view/page/page/portfolio.phtml
@@ -14,11 +14,13 @@
 </div>
 
 <script>
-    $(document).ready(function () {
-        var width;
+    $(document).ready(function() {
+        var width = 720;
         
         if ($('.content').width() < 481 || screen.width < 481) {
                         width = screen.width;
+                    } else if ($('.content').width() < 800 || screen.width < 800) {
+                        width = 480;
                     } else {
                         width = 720;
                     }
@@ -34,6 +36,7 @@
         });
 
         $('.portfolio-body-slider').bxSlider({
+            //startSlide: 3,
             slideWidth: width,
             moveSlides: 1,
             slideMargin: 0,
