--- a/module/Page/view/partial/marketing.phtml
+++ b/module/Page/view/partial/marketing.phtml
@@ -1,3 +1,6 @@
 <?php foreach ($this->portfolios as $key => $portfolio) { ?>
-    <div class="marketing-body-block_9-item" style="background-image: url('<?= $portfolio['logo'] ?>')"></div>
+    <?php if ($portfolio['logo']) { ?>
+        
+<a href="<?= $this->url('page', array('action' => 'portfolio')) ?>"><div class="marketing-body-block_9-item" style="background-image: url('<?= substr($portfolio['logo'], 6) ?>')"></div></a>
+    <?php } ?>
 <?php } ?>
