--- a/module/Page/view/page/page/marketing.phtml
+++ b/module/Page/view/page/page/marketing.phtml
@@ -71,3 +71,60 @@
     </a>
     <div class="promotion-body-button_price">РАСЧИТАТЬ ЦЕНУ</div>
 </div>
+
+<script>
+    $(document).ready(function () {
+        var slides = 4;
+        var delay = (function () {
+            var timer = 0;
+            return function (callback, ms) {
+                clearTimeout(timer);
+                timer = setTimeout(callback, ms);
+            };
+        })();
+
+        if ($(window).width() < 375) {
+            slides = 2;
+        } else if ($(window).width() < 510) {
+            slides = 3;
+        } else {
+            slides = 4;
+        }
+
+        var slider = $('.marketing-body-block_9').bxSlider({
+            slideWidth: 105,
+            minSlides: 1,
+            maxSlides: slides,
+            moveSlides: 1,
+            slideMargin: 30,
+            auto: true,
+            pause: 2000,
+            controls: false,
+            pager: false,
+        });
+
+        $(window).resize(function () {
+            delay(function () {
+                if ($(window).width() < 375) {
+                    slides = 2;
+                } else if ($(window).width() < 510) {
+                    slides = 3;
+                } else {
+                    slides = 4;
+                }
+                slider.destroySlider();
+                slider.reloadSlider({
+                    slideWidth: 105,
+                    minSlides: 1,
+                    maxSlides: slides,
+                    moveSlides: 1,
+                    slideMargin: 30,
+                    auto: true,
+                    pause: 2000,
+                    controls: false,
+                    pager: false,
+                });
+            }, 300);
+        });
+    });
+</script>
