--- a/public/css/style.css
+++ b/public/css/style.css
@@ -565,7 +565,7 @@ body.index .bx-viewport {
 }
 
 .promotion-body-carusel {
-    width: 720px;
+    width: 720px; 
     /* height: 220px; */
     overflow: hidden;
     margin: 0 auto;
@@ -1168,10 +1168,46 @@ body.process-checkout .feedback-form {
     margin: 0 auto;
 }
 
+.design-body-banners {
+    overflow: hidden;
+}
+
+.design-body-banners_row {
+    overflow: hidden;
+    width: 640px;
+    margin: 0 auto;
+}
+
+.design-body-banners_item {
+    width: 300px;
+    height: 150px;
+    margin: 10px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    float: left;
+}
+
+body.design .bx-controls-direction a {
+    margin-top: -30px!important;
+}
+
 
 @media only screen 
 and (min-width : 320px) 
 and (max-width : 480px) {
+
+    .promotion .promotion-body-carusel {
+        width: 340px;
+    }
+
+    .design-body-banners_row {
+        width: 300px!important;
+    }
+    .design-body-banners_item {
+        margin-left: 0;
+        margin-right: 0;
+    }
     /* INDEX */
     .main-navigation-item {
         display: block;
@@ -1492,9 +1528,9 @@ and (max-width : 640px) {
     }
     .contacts-right-column {
         float: none;
-    
+
         width: inherit;
-}
+    }
 
     .feedback-form {
         float: none;
@@ -1528,14 +1564,6 @@ and (max-width : 640px) {
     }
 
     body.portfolio .bx-next {
-        right: 0;
-    }
-
-    body.promotion .bx-prev {
-        left: 0;
-    }
-
-    body.promotion .bx-next {
         right: 0;
     }
 
@@ -1574,7 +1602,7 @@ and (max-width : 816px) {
         display: block;
         margin: 0 auto;
     }
-    
+
     .contacts-right-column_phones {
         overflow: hidden;
         margin: 0 auto;
@@ -1591,12 +1619,12 @@ and (max-width : 816px) {
         margin: 2px;
         margin: 0 auto;
     }
-    
+
     .contacts-right-column {
         float: none;
         width: inherit;
     }
-    
+
     .portfolio-body-slider-item_left {
         float: none;
     }
@@ -1636,7 +1664,7 @@ and (max-width : 816px) {
     .portfolio-body-slider-item .bx-wrapper {
         float: none;
     }
-    
+
     .promotion-body-carusel_first {
         float: none;
         margin: 0 auto;
@@ -1646,13 +1674,13 @@ and (max-width : 816px) {
         float: none;
         margin: 0 auto;
     }
-    
+
     .promotion-body-table2-cell {
         float: none;
         border-left: 0;
         border-bottom: 1px solid #072154;
     }
-    
+
     .marketing-body-block_3_part1 {
         width: 245px;
         height: 180px;
@@ -1665,5 +1693,20 @@ and (max-width : 816px) {
         /* height: 135px; */
         float: none;
         display: block;
+    }
+
+
+}
+
+@media only screen  
+and (min-width : 480px)
+and (max-width : 816px) {
+
+    .design-body-banners_row {
+        width: 320px;
+    }
+
+    .promotion .promotion-body-carusel {
+        width: 340px;
     }
 }
