--- a/module/Admin/view/admin/admin/checkouts.phtml
+++ b/module/Admin/view/admin/admin/checkouts.phtml
@@ -19,6 +19,12 @@
     <?php } ?>
 </div>
 
+<div class="promotion-body-block_9">
+    <a href="<?= $this->url('admin', array('action' => 'index')) ?>">
+        <div class="promotion-body-button_order">Назад</div>
+    </a>
+</div>
+
 <script>
     $(document).ready(function () {
         $('body').on('click', '.feedbacks-table_item_delete', function () {
