--- a/module/Admin/view/admin/admin/index.phtml
+++ b/module/Admin/view/admin/admin/index.phtml
@@ -1,7 +1,7 @@
 <a href="/admin/checkouts"><div class="admin-button">Оформленные заказы(Complete)</div></a>
 <a href="/admin/feedbacks"><div class="admin-button">feedbacks(Complete)</div></a>
 <a href="/admin/users"><div class="admin-button">Работа с модераторами(Complete)</div></a>
-<a href="/admin/addportfolio"><div class="admin-button">Создать портфолио(Complete)</div></a>
+<a href="/admin/portfolios"><div class="admin-button">Работа с портфолио(Complete)</div></a>
 <div class="admin-button">Работа с баннерами</div>
 <div class="admin-button">Работа со страницами(not working)</div>
 
