--- a/module/Admin/view/admin/admin/users.phtml
+++ b/module/Admin/view/admin/admin/users.phtml
@@ -40,6 +40,11 @@ echo $this->form()->openTag($form);
 
 <?php echo $this->form()->closeTag() ?>
 
+<div class="promotion-body-block_9">
+    <a href="<?= $this->url('admin', array('action' => 'index')) ?>">
+        <div class="promotion-body-button_order">Назад</div>
+    </a>
+</div>
 
 
 <script>
