--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -3,12 +3,12 @@
 <html lang="ru">
     <head>
         <meta charset="utf-8">
-        <?php echo $this->headTitle('abc') ?>
+        <?php echo $this->headTitle('abc') //это ?>
 
         <?php
         echo $this->headMeta()
                 ->appendName('viewport', 'width=device-width, height=device-height, initial-scale=1.0')
-                ->appendName('description', 'abc mediagroup')
+                ->appendName('description', 'abc mediagroup')// и это и кеуворды
                 ->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
         ?>
 
