--- a/module/Page/view/page/page/marketing.phtml
+++ b/module/Page/view/page/page/marketing.phtml
@@ -69,7 +69,7 @@
     <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
         <div class="promotion-body-button_order">ОФОРМИТЬ ЗАКАЗ</div>
     </a>
-    <div class="promotion-body-button_price">РАСЧИТАТЬ ЦЕНУ</div>
+    <div class="promotion-body-button_order">РАСЧИТАТЬ ЦЕНУ</div>
 </div>
 
 <script>
@@ -119,6 +119,7 @@
                     maxSlides: slides,
                     moveSlides: 1,
                     slideMargin: 30,
+                    randomStart: true,
                     auto: true,
                     pause: 2000,
                     controls: false,
