--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1192,6 +1192,9 @@ body.design .bx-controls-direction a {
     margin-top: -30px!important;
 }
 
+.promotion-body-button_order:hover {
+    background: #071f4e;
+}
 
 @media only screen 
 and (min-width : 320px) 
