good fixes and styles, some changes

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -59,8 +59,8 @@
         </a>
     </div>
     <div class="main-navigation-item">
-        <a href="<?= $this->url('page', array('action' => 'publicity')) ?>">
-            <img class="main-navigation-item_image publicity left-align" alt="Реклама" src="/img/publicity.png">
+        <a href="<?= $this->url('page', array('action' => 'pr')) ?>">
+            <img class="main-navigation-item_image publicity left-align" alt="Реклама" src="/img/pr.png">
             <div class="caption left-align">
                 <h3>Реклама и PR</h3>
                 <p>В социальных <br/> сетях</p>
