--- a/module/Page/view/page/page/marketing.phtml
+++ b/module/Page/view/page/page/marketing.phtml
@@ -3,7 +3,7 @@
         <div class="title-icon design_static"></div>
     </a>
     <div class="title-icon_main page_marketing"></div>
-    <a href="<?= $this->url('page', array('action' => 'publicity')) ?>">
+    <a href="<?= $this->url('page', array('action' => 'pr')) ?>">
         <div class="title-icon publicity_static"></div>
     </a>
 </div>
