--- a/module/Page/view/page/page/promotion.phtml
+++ b/module/Page/view/page/page/promotion.phtml
@@ -1,5 +1,5 @@
 <div class="title-icons">
-    <a href="<?= $this->url('page', array('action' => 'publicity')) ?>">
+    <a href="<?= $this->url('page', array('action' => 'pr')) ?>">
         <div class="title-icon publicity_static"></div>
     </a>
     <div class="title-icon_main page_promotion"></div>
